[gd_scene load_steps=7 format=2]

[ext_resource path="res://enemies/ManaPellet.gd" type="Script" id=1]
[ext_resource path="res://assets/sphere_soft.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 750.0

[sub_resource type="CircleShape2D" id=2]
radius = 23.0

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.423841, 0.774834, 1 )
colors = PoolColorArray( 0.186523, 0, 1, 1, 0.292098, 0, 1, 1, 0.655273, 0, 1, 1, 0.989235, 0.351563, 1, 0 )

[sub_resource type="CircleShape2D" id=4]
radius = 23.0

[node name="ManaPellet" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 200
preprocess = 0.8
texture = ExtResource( 2 )
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
radial_accel = 35.0
scale_amount = 0.03
color_ramp = SubResource( 3 )

[node name="DissolveTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.8
one_shot = true

[node name="Pellet" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pellet"]
shape = SubResource( 4 )

[connection signal="timeout" from="DissolveTimer" to="." method="_on_DissolveTimer_timeout"]
[connection signal="body_entered" from="Pellet" to="." method="_on_Pellet_body_entered"]
